refactor: Se ha refactorizado el código
- Se han corregido varios errores alertados por SonarLint.