@@ -1,14 +1,13 @@
 package com.aipixel.api.component.tag.repository;
 
 import com.aipixel.api.component.tag.Tag;
-import com.aipixel.api.component.tag.TagRepository;
 import com.aipixel.api.component.tag.TagMapper;
+import com.aipixel.api.component.tag.TagRepository;
 import com.aipixel.api.component.tag.vo.TagId;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 
@@ -44,10 +43,9 @@ public class TagRepositoryImpl implements TagRepository {
 
     @Override
     public List<Tag> findAllById(final List<TagId> id ) {
-        final List<Long> tagIdList = id.stream().map( TagId::value ).collect( Collectors.toList() );
+        final List<Long> tagIdList = id.stream().map( TagId::value ).toList();
         return this.tagDao.findAllById( tagIdList )
-                .stream().map( TagMapper::modelToEntity )
-                .collect( Collectors.toList() );
+                .stream().map( TagMapper::modelToEntity ).toList();
     }
 
 // ------------------------------------------------------------------------------------------------------------------ \\
